--- a/index.html
+++ b/index.html
@@ -5,47 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Image & Text Component</title>
 </head>
 <body>
-    <div class="ic5050 light">
-        <div class="img50">
-            <img src="about1.jpg" alt="">
+    <div class="main-container dark">
+        <div class="half half-cont right">
+            <h2>Title of this component</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita odit veniam dolorum vitae dolorem recusandae quod deleniti sunt sed sit porro fugit reiciendis exercitationem facere enim, iure perspiciatis voluptas cumque sequi? Ut laborum, eaque esse quas doloribus ducimus laudantium, eum nemo aliquid ex inventore quis voluptatibus voluptates repellendus veritatis illum quasi in, nesciunt mollitia quos excepturi cum ratione earum! Ex, maiores sint rem, autem ipsum at iusto laudantium exercitationem totam minus inventore consequuntur obcaecati numquam quo quisquam, id earum unde quod velit placeat.</p>
         </div>
-        <div class="cont50">
-            <h1>A Commitment to Customer Satisfaction</h1>
-            <p>Crystal Clear Pool & Spa Service is one of the few Napa pool maintenance and repair companies to offer complete swimming pool maintenance and repair services for extremely affordable prices. This means that no matter the size of your project or number of Napa pool maintenance or repair services you require, you can trust that every step of the process will be expertly handled by the same company. Our work is always guaranteed, and we make sure that you are kept up-to-date on our progress and on any and all aspect of the work that may bring changes to the schedule or work order.</p>
-            <h3>Call us now! (707) 252-8255</h3>
-        </div>
-    </div>
-    <div class="ic5050 reverse dark">
-        <div class="img50">
-            <img src="006.jpg" alt="">
-        </div>
-        <div class="cont50">
-            <h1>A Commitment to Customer Satisfaction</h1>
-            <p>Crystal Clear Pool & Spa Service is one of the few Napa pool maintenance and repair companies to offer complete swimming pool maintenance and repair services for extremely affordable prices. This means that no matter the size of your project or number of Napa pool maintenance or repair services you require, you can trust that every step of the process will be expertly handled by the same company. Our work is always guaranteed, and we make sure that you are kept up-to-date on our progress and on any and all aspect of the work that may bring changes to the schedule or work order.<br><br>If you are a Napa pool owner and would like more information on the pool maintenance and repair services we offer, do not hesitate to call us today. We will be happy to schedule a free estimate at your earliest convenience.</p>
-            <h3>Call us now! (707) 252-8255</h3>
+        <div class='half half-img left'>
+            <div class="img-container">
+                <div class="img_holder">
+                    <img src="2.jpg"/>    
+                </div>
+            </div>
         </div>
     </div>
-    <div class="ic5050 light">
-        <div class="img50">
-            <img src="010.jpg" alt="">
+    <div class="main-container light">
+        <div class="half half-cont">
+            <h2>Title of this component</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita odit veniam dolorum vitae dolorem recusandae quod deleniti sunt sed sit porro fugit reiciendis exercitationem facere enim, iure perspiciatis voluptas cumque sequi? Ut laborum, eaque esse quas doloribus ducimus laudantium, eum nemo aliquid ex inventore quis voluptatibus voluptates repellendus veritatis illum quasi in, nesciunt mollitia quos excepturi cum ratione earum! Ex, maiores sint rem, autem ipsum at iusto laudantium exercitationem totam minus inventore consequuntur obcaecati numquam quo quisquam, id earum unde quod velit placeat. Repellendus earum quia corrupti necessitatibus eius aut? Molestiae nulla doloremque ipsa ratione magnam optio cum officia facere neque vitae consequuntur omnis, unde maxime voluptates ex quos suscipit, perspiciatis repellendus cupiditate. Ullam omnis, a laboriosam neque voluptas eaque asperiores libero incidunt, deleniti, optio nobis odit vitae quo? Dolore, nihil fugit cumque voluptatum omnis natus necessitatibus ea. Ipsam, aspernatur quasi ex doloribus accusantium modi accusamus ipsa praesentium consectetur, ea in, unde odio minima fuga sunt nihil minus. Esse, sequi, illum eligendi fugiat explicabo a, ab ipsa rerum unde quis suscipit magnam ipsam. Nostrum quam cumque veniam laudantium consequatur iste, optio explicabo deserunt tenetur? Natus deserunt voluptates assumenda distinctio, laborum modi tempora dicta rem eligendi quisquam optio vitae est sed repellendus consequatur impedit totam cumque fuga explicabo ut reprehenderit ad quos. Animi cumque aliquam, mollitia quia illo aspernatur odio quae beatae dolorem, quisquam maiores tempore repellendus excepturi voluptates! Excepturi, nisi ipsa.</p>
         </div>
-        <div class="cont50">
-            <h1>A Commitment to Customer Satisfaction</h1>
-            <p>Crystal Clear Pool & Spa Service is one of the few Napa pool maintenance and repair companies to offer complete swimming pool maintenance and repair services for extremely affordable prices. This means that no matter the size of your project or number of Napa pool maintenance or repair services you require, you can trust that every step of the process will be expertly handled by the same company. Our work is always guaranteed, and we make sure that you are kept up-to-date on our progress and on any and all aspect of the work that may bring changes to the schedule or work order.<br><br>If you are a Napa pool owner and would like more information on the pool maintenance and repair services we offer, do not hesitate to call us today. We will be happy to schedule a free estimate at your earliest convenience.</p>
-            <h3>Call us now! (707) 252-8255</h3>
+        <div class='half half-img'>
+            <div class="img-container">
+                <div class="img_holder">
+                    <img src="1.jpg"/>    
+                </div>
+            </div>
         </div>
     </div>
-    <div class="ic5050 reverse dark">
-        <div class="img50">
-            <img src="about1.jpg" alt="">
+    <div class="main-container dark">
+        <div class="half half-cont">
+            <h2>Title of this component</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita odit veniam dolorum vitae dolorem recusandae quod deleniti sunt sed sit porro fugit reiciendis exercitationem facere enim, iure perspiciatis voluptas cumque sequi? Ut laborum, eaque esse quas doloribus ducimus laudantium, eum nemo aliquid ex inventore quis voluptatibus voluptates repellendus veritatis illum quasi in, nesciunt mollitia quos excepturi cum ratione earum! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita odit veniam dolorum vitae dolorem recusandae quod deleniti sunt sed sit porro fugit reiciendis exercitationem facere enim, iure perspiciatis voluptas cumque sequi? Ut laborum, eaque esse quas doloribus ducimus laudantium, eum nemo aliquid ex inventore quis voluptatibus voluptates repellendus veritatis illum quasi in, nesciunt mollitia quos excepturi cum ratione earum!</p>
         </div>
-        <div class="cont50">
-            <h1>A Commitment to Customer Satisfaction</h1>
-            <p>Crystal Clear Pool & Spa Service is one of the few Napa pool maintenance and repair companies to offer complete swimming pool maintenance and repair services for extremely affordable prices. This means that no matter the size of your project or number of Napa pool maintenance or repair services you require, you can trust that every step of the process will be expertly handled by the same company. Our work is always guaranteed, and we make sure that you are kept up-to-date on our progress and on any and all aspect of the work that may bring changes to the schedule or work order.</p>
-            <h3>Call us now! (707) 252-8255</h3>
+        <div class='half half-img'>
+            <div class="img-container tall">
+                <div class="img_holder">
+                    <img src="3.jpg"/>    
+                </div>
+            </div>
         </div>
     </div>
 </body>
